--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,18 @@
 
     grid-template-columns: .5fr .5fr;
 }
+
+input[type='text'] , input[type = 'password'] , input[type='email']{
+    @apply block;
+    @apply w-full mb-2 border px-2 py-3 rounded-xl bg-gray-200
+}
+
+.button{
+    @apply py-3 rounded-xl bg-white border-gray-300  border-2 text-gray-700 font-bold  w-full mb-2
+}
+
+button[type='submit']{
+    @apply bg-primary text-white border-0 
+}
+
+
